<resources>
    <string name="app_name">Unbeaned</string>
    <string name="login_email_hint">Email</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="search_hint">Search</string>
    <string name="usernameFormat">\@%1$s</string>
    <string name="place_detail_price">\u2022 %1$s</string>
    <string name="profile_favorites_header">Your Favorites</string>
    <string name="other_profile_favorites_header">Their Favorites</string>
    <string name="title_activity_main1">MainActivity1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="tell_the_world_about_yourself">Tell the world about yourself!</string>
    <string name="your_name">Your Name</string>
    <string name="your_user_handle">Your User Handle</string>
    <string name="at_symbol">\@</string>
    <string name="save_changes">Save Changes</string>
    <string name="save">save</string>
    <string name="empty_reviewList_placeholder_text">Make a review to see your contributions here!</string>
    <string name="place_details_reviews_header">Recommended Reviews</string>
    <string name="review_details_comments_header">Comments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compose_review_hint">Write a review about the place</string>
</resources>